--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,7 +1,12 @@
-# DataSource
-spring.datasource.url=jdbc:postgresql://localhost:5432/movie_flix
-spring.datasource.username=dvsql
-spring.datasource.password=dvsql123
+# datasource
+spring.datasource.url=jdbc:h2:mem:bdsdb
+spring.datasource.username=sa
+spring.datasource.password=
+
+# h2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
 # Hibernate
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
