--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -2,6 +2,7 @@
 spring.datasource.url=jdbc:h2:mem:bdsdb
 spring.datasource.username=sa
 spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # h2
 spring.h2.console.enabled=true
